--- a/src/pages/menu/Menu.css
+++ b/src/pages/menu/Menu.css
@@ -15,6 +15,15 @@
   white-space: nowrap;
 }
 
+.menu-sub-categories {
+  padding: 10px 0px;
+  background: #fff;
+  border-radius: 0px;
+  position: sticky;
+  top: 0;
+  left: 0;
+}
+
 .menu-category,
 .menu-sub-category {
   padding: 10px 20px;
