--- a/src/components/ui/cards/vertical-card/Vertical-Card.css
+++ b/src/components/ui/cards/vertical-card/Vertical-Card.css
@@ -2,15 +2,16 @@
   padding: 10px;
   display: grid;
   gap: 10px;
-  grid-auto-rows: 50% auto;
+  grid-auto-rows: 1fr auto;
   background: #f1f1f1;
   border-radius: 15px;
   overflow: hidden;
 }
 
 .vl-c-chassis {
-  min-height: 100%;
-  background: #708d6f;
+  width: 100%;
+  height: 100%;
+  background: #666;
   border-radius: 15px;
   overflow: hidden;
 }
