--- a/src/components/ui/stamp/Stamp.css
+++ b/src/components/ui/stamp/Stamp.css
@@ -1,4 +1,7 @@
 .stamp {
+  color: #666;
+  font-size: 14px;
+  font-weight: 666;
   display: grid;
   justify-content: center;
   padding: 0px 0px 20px 0px;
