--- a/src/pages/vacancies/Vacancies.css
+++ b/src/pages/vacancies/Vacancies.css
@@ -3,6 +3,15 @@
   gap: 20px;
 }
 
+.vacancies-label {
+  padding: 10px;
+  display: grid;
+  gap: 10px;
+  justify-content: center;
+  border: 1px solid #303030;
+  border-radius: 15px;
+}
+
 .vacancies-cards {
   display: grid;
   gap: 20px;
