--- a/src/components/ui/cards/horizontal-card/Horizontal-Card.css
+++ b/src/components/ui/cards/horizontal-card/Horizontal-Card.css
@@ -8,8 +8,9 @@
 }
 
 .hl-c-chassis {
-  min-height: 100%;
-  background: #708d6f;
+  width: 100%;
+  height: 100%;
+  background: #666;
   border-radius: 15px;
   overflow: hidden;
 }
