--- a/src/components/ui/cards/vertical-card/Vertical-Card.css
+++ b/src/components/ui/cards/vertical-card/Vertical-Card.css
@@ -2,7 +2,7 @@
   padding: 10px;
   display: grid;
   gap: 10px;
-  grid-auto-rows: 1fr auto;
+  grid-auto-rows: 50% 50%;
   background: #f1f1f1;
   border-radius: 15px;
   overflow: hidden;
