--- a/src/main.css
+++ b/src/main.css
@@ -8,7 +8,6 @@
 body {
   color: #303030;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  position: relative;
 }
 
 a {
@@ -16,13 +15,23 @@ a {
   text-decoration: none;
 }
 
-#root {
-  min-height: 100%;
-  background: #000;
-  position: relative;
+html.no-scroll,
+body.no-scroll {
+  overflow: hidden;
 }
 
-.between-line {
-  border: 1px solid #dadada;
-  border-radius: 100px;
+.root {
+  min-height: 100vh;
+  display: grid;
+  grid-auto-columns: 50vw 100vw;
+  grid-auto-rows: 100%;
+  grid-auto-flow: column;
+  background: #fff;
+  transition: 0.6s;
+  position: relative;
+  left: -50%;
+}
+
+.root-shift {
+  left: 0%;
 }
