--- a/src/components/ui/rise/Rise.css
+++ b/src/components/ui/rise/Rise.css
@@ -2,17 +2,16 @@
   color: #303030;
   font-size: 60px;
   border-radius: 100px;
-  transition: bottom 0.6s ease, opacity 0.3s ease;
+  transform: scale(0);
+  transition: transform 0.6s;
   pointer-events: none;
-  opacity: 0;
   z-index: 666;
   position: fixed;
-  bottom: -100px;
+  bottom: 20px;
   left: 20px;
 }
 
 .active-rise {
-  bottom: 20px;
-  opacity: 1;
+  transform: scale(1);
   pointer-events: auto;
 }
