--- a/src/pages/menu/Menu.css
+++ b/src/pages/menu/Menu.css
@@ -64,16 +64,15 @@
   padding: 10px 20px;
   background: #303030;
   border-radius: 100px;
-  transition: bottom 0.6s ease, opacity 0.3s ease;
+  transform: scale(0);
+  transition: transform 0.6s;
   pointer-events: none;
-  opacity: 0;
   position: fixed;
-  bottom: -100px;
+  bottom: 20px;
   right: 20px;
 }
 
 .active-menu-navigate-cart {
-  bottom: 20px;
-  opacity: 1;
+  transform: scale(1);
   pointer-events: auto;
 }
